# CoSM-ICP

./: CMakeLists.txt  README.md  setup.sh
external_libraries/pcl_1_9/: CMakeLists.txt
external_libraries/pcl_1_9/cuda/common/include/pcl/cuda/: point_cloud.h
external_libraries/pcl_1_9/gpu/features/src/: fpfh.cu
external_libraries/pcl_1_9/gpu/octree/src/cuda/: approx_nsearch.cu  knn_search.cu
external_libraries/pcl_1_9/registration/: CMakeLists.txt
external_libraries/pcl_1_9/registration/include/pcl/registration/: correspondence_estimation.h  icp.h  transformation_estimation.h  transformation_estimation_correntropy_svd.h  transformation_estimation_correntropy_svd_scale.h  transformation_estimation_svd.h
external_libraries/pcl_1_9/registration/include/pcl/registration/impl/: correspondence_estimation.hpp  icp.hpp  registration.hpp  transformation_estimation_correntropy_svd.hpp  transformation_estimation_correntropy_svd_scale.hpp  transformation_estimation_svd_scale.hpp
external_libraries/pcl_1_9/registration/src/: transformation_estimation_correntropy_svd.cpp  transformation_estimation_correntropy_svd_scale.cpp
src/: CoSM_ICP_demo_Viewer.cpp  CoSM_Results_Collection.cpp  bun01.pcd  dr1.pcd  hp1.pcd  kitti_lidar1.pcd  kitti_lidar2.pcd  kitti_lidar3.pcd
src/test_files/: demo.cpp  icp.cpp  icp.h  icpPointToPlane.cpp  icpPointToPlane.h  icpPointToPoint.cpp  icpPointToPoint.h  kdtree.cpp  matrix.cpp  matrix.h  test1.m
